--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-graduate fa-fw w3-margin-right w3-xxlarge w3-text-cyan"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-cyan"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Indian Statistical  Institute, Giridih</b></h5>
           <h6 class="w3-text-cyan"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024-2025</h6>
