--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
           <!-- Download CV Section -->
           <button class="w3-button w3-round-large w3-margin-bottom">
-            <a href="path/to/Hasnahara_Khatun_CV.pdf" download style="text-decoration: none; color: white;">
+            <a href="https://drive.google.com/file/d/1vdxqwdLdSE1juP5jHZasbrA20URs35o9/view?usp=sharing" download style="text-decoration: none; color: white;">
               <i class="fa fa-download fa-fw w3-margin-right"></i>Download CV
             </a>
           </button>
