--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <p style="color: #6a11cb; font-weight: bold;">Python</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:80%; color: white !important; font-weight: bold;">
-              Proficient along with Pandas & Numpy
+              Fundamentals, Pandas, Matplotlib, Seaborn, Scikit-learn & Numpy
             </div>
           </div>
           <p style="color: #6a11cb; font-weight: bold;">R</p>
@@ -143,7 +143,7 @@
           <p style="color: #6a11cb; font-weight: bold;">Microsoft Excel</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:70%; color: white !important; font-weight: bold;">
-              Proficient with functions, Vlookup
+              Functions, Vlookup, Visualization
             </div>
           </div>
           <br>
@@ -151,19 +151,19 @@
           <p class="w3-large"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-cyan"></i>Languages</b></p>
           <p>English</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:80%; text-align: center; line-height: 24px; color: white;">80%</div>
+            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:80%; text-align: center; line-height: 24px; color: white;"></div>
           </div>
           <p>বাংলা - Bengali</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:85%; text-align: center; line-height: 24px; color: white;">85%</div>
+            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:85%; text-align: center; line-height: 24px; color: white;"></div>
           </div>
           <p>हिंदी - Hindi</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:70%; text-align: center; line-height: 24px; color: white;">70%</div>
+            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:70%; text-align: center; line-height: 24px; color: white;"></div>
           </div>
           <p>عَرَبِيّ - Arabic</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:15%; text-align: center; line-height: 24px; color: white;">15%</div>
+            <div class="w3-round-xlarge w3-cyan" style="height:24px;width:10%; text-align: center; line-height: 24px; color: white;"></div>
           </div>
           <br>
         </div>
