--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Participatory Rural Appraisal on Rural Healthcare</b></h5>
+          <h5 class="w3-opacity"><b>Participatory Rural Appraisal</b></h5>
           <h6 class="w3-text-cyan"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2024</h6>
-          <p>Conducted participatory rural appraisal (PRA) in Bolpur, West Bengal, to address rural healthcare challenges, focusing on infrastructure, workforce, and community engagement, and proposing strategies aligned with the Sustainable Development Goals (SDGs).</p>
+          <p>Conducted a Participatory Rural Appraisal (PRA) in Dangapara Village, Birbhum
+District, analyzing agricultural practices and livelihood dynamics in tribal and
+non-tribal communities to enhance sustainability and economic resilience.</p>
         </div>
       </div>
 
