--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <p style="color: #6a11cb; font-weight: bold;">Python</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-cyan" style="width:80%; color: white !important; font-weight: bold;">
-              Fundamentals, Pandas, Matplotlib, Seaborn, Scikit-learn & Numpy
+              Pandas, Matplotlib, Seaborn, Scikit-learn & Numpy
             </div>
           </div>
           <p style="color: #6a11cb; font-weight: bold;">R</p>
