--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
               <i class="fa fa-download fa-fw w3-margin-right"></i>Download CV
             </a>
           </button>
+
+          <button class="w3-button w3-round-large w3-margin-bottom">
+            <a href="https://www.upload-apk.com/LrJq9dhLqVpXHd2" download style="text-decoration: none; color: white;">
+              <i class="fa fa-android fa-fw w3-margin-right"></i>Download APK
+            </a>
+          </button>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-cyan"></i>Skills</b></p>
