--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        background: #ffffff;
+        background: #fffffa;
       }
 
       /* Button Styling */
